--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,6 +12,7 @@
 :root{
     --bg-color1:#F5F5F5;
     --bg-color2:#455A64;
+    --bg-color3:#FFC107;
 }
 
 body{
@@ -74,7 +75,7 @@ header nav ul li a:hover::after{
 }
 
 header nav ul li a.active{
-    color: #FFC107;
+    color: var(--bg-color3);
     font-weight: bold;
 }
 
@@ -120,4 +121,84 @@ header.light nav .mode .mode-switch::after{
 
 header nav .mode .mode-switch.active::after{
     left: 25px;
+}
+
+#container{
+    padding: 60px 120px 0 120px;
+}
+
+#container h2{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 26px;
+}
+
+#container h2 button{
+    height: 50px;
+    padding: 0 26px;
+    border-radius: 5px;
+    border: 0;
+    background-color: var(--bg-color3);
+    font-weight: bold;
+    cursor: pointer;
+    transition-duration: 300ms;
+}
+#container h2 button:hover{
+    background-color: #000000;
+    color: var(--bg-color3);
+}
+
+#container .tabela{
+    background-color: #FFFFFF;
+    padding: 26px;
+    border-radius: 5px;
+    box-shadow: 0 5px 25px #00000015;
+}
+
+#tabela .acoes{
+    display: flex;
+    gap: 16px;
+}
+
+#tabela .acoes ion-icon{
+    width: 20px;
+    height: 20px;
+    background-color: var(--bg-color3);
+    color: #000000;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+#lateral{
+    width: 100%;
+    height: 100%;
+    background-color: #00000070;
+    backdrop-filter: blur(3px);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 200ms ease;
+}
+
+#lateral.active{
+    opacity: 1;
+    visibility: visible;
+}
+
+#lateral .conteudo{
+    width: 400px;
+    height: 100%;
+    background-color: #F5F5F5;
+    position: absolute;
+    top: 0;
+    right: -100%;
+    transition-delay: 200ms;
+    transition-duration: 300ms;
+}
+
+#lateral.active .conteudo{
+    right: 0;
 }
