--- a/css/estilo.css
+++ b/css/estilo.css
@@ -197,8 +197,101 @@ header nav .mode .mode-switch.active::after{
     right: -100%;
     transition-delay: 200ms;
     transition-duration: 300ms;
+    padding: 16px;
 }
 
 #lateral.active .conteudo{
     right: 0;
+}
+
+#lateral h3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 28px;
+
+}
+
+#lateral h3 ion-icon{
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    border-radius: 20px;
+    transition-duration: 100ms;
+}
+
+#lateral h3 ion-icon:hover {
+    background-color: #455a64;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+#lateral form {
+    margin-top: 26px;
+}
+
+#lateral label {
+    display: block;
+    font-size: 12px;
+    text-transform: uppercase;
+    margin-bottom: 6px;
+    font-weight: bold;
+}
+
+#lateral input {
+    width: 100%;
+    height: 46px;
+    padding-left: 10px;
+    border-radius: 5px;
+    margin-bottom: 16px;
+    border: 2px solid #dedede;
+}
+
+#lateral button {
+    width: 100%;
+    height: 46px;
+    background-color: #FFC107;
+    border-radius: 5px;
+    transition-duration: 200ms;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+#lateral button span {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+    transition-duration: 200ms;
+}
+
+#lateral button span ion-icon {
+    width: 20px;
+    height: 20px;
+    padding: 10px;
+}
+
+#lateral button::after {
+    content: "";
+    width: 0;
+    height: 100%;
+    background-color: #000000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition-duration: 200ms;
+}
+
+#lateral button:hover::after {
+    width: 100%;
+}
+
+#lateral button:hover span {
+    color: #FFFFFF;
 }
