--- a/css/estilo.css
+++ b/css/estilo.css
@@ -193,44 +193,43 @@ header nav .mode .mode-switch.active::after{
     height: 100%;
     background-color: #F5F5F5;
     position: absolute;
+    padding: 16px;
     top: 0;
     right: -100%;
     transition-delay: 200ms;
     transition-duration: 300ms;
-    padding: 16px;
 }
 
 #lateral.active .conteudo{
     right: 0;
 }
 
-#lateral h3 {
+#lateral h3{
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 28px;
-
 }
 
 #lateral h3 ion-icon{
     width: 20px;
     height: 20px;
-    padding: 5px;
+    padding: 10px;
     border-radius: 20px;
-    transition-duration: 100ms;
-}
-
-#lateral h3 ion-icon:hover {
-    background-color: #455a64;
-    color: #FFFFFF;
+    transition-duration: 200ms;
     cursor: pointer;
 }
 
-#lateral form {
+#lateral h3 ion-icon:hover{
+    background-color: #455A64;
+    color: #FFFFFF;
+}
+
+#lateral form{
     margin-top: 26px;
 }
 
-#lateral label {
+#lateral label{
     display: block;
     font-size: 12px;
     text-transform: uppercase;
@@ -238,16 +237,16 @@ header nav .mode .mode-switch.active::after{
     font-weight: bold;
 }
 
-#lateral input {
+#lateral input{
     width: 100%;
     height: 46px;
     padding-left: 10px;
     border-radius: 5px;
+    border: 2px solid #DEDEDE;
     margin-bottom: 16px;
-    border: 2px solid #dedede;
 }
 
-#lateral button {
+#lateral button{
     width: 100%;
     height: 46px;
     background-color: #FFC107;
@@ -258,7 +257,22 @@ header nav .mode .mode-switch.active::after{
     overflow: hidden;
 }
 
-#lateral button span {
+#lateral button::after{
+    content: "";
+    width: 0;
+    height: 100%;
+    background-color: #000000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition-duration: 200ms;
+}
+
+#lateral button:hover::after{
+    width: 100%;
+}
+
+#lateral button span{
     font-size: 12px;
     text-transform: uppercase;
     font-weight: bold;
@@ -271,27 +285,30 @@ header nav .mode .mode-switch.active::after{
     transition-duration: 200ms;
 }
 
-#lateral button span ion-icon {
+#lateral button span ion-icon{
     width: 20px;
     height: 20px;
     padding: 10px;
 }
 
-#lateral button::after {
-    content: "";
-    width: 0;
-    height: 100%;
-    background-color: #000000;
-    position: absolute;
-    top: 0;
-    left: 0;
+#lateral button:hover span{
+    color: #FFFFFF;
+}
+
+.btn{
+    width: 20px;
+    height: 20px;
+    padding: 10px;
+    background-color: #FFC107;
+    color: #455A64;
+    cursor: pointer;
+    border-radius: 20px;
     transition-duration: 200ms;
 }
-
-#lateral button:hover::after {
-    width: 100%;
+.btn:hover{
+    background-color: #455A64;
+    color: #FFC107;
 }
-
-#lateral button:hover span {
-    color: #FFFFFF;
+.btn:last-child{
+    margin-left: 16px;
 }
